--- a/app/src/main/res/layout/activity_dat_ban.xml
+++ b/app/src/main/res/layout/activity_dat_ban.xml
@@ -31,13 +31,15 @@
                 android:text="Billiard Group 1 - FPT University"
                 android:textColor="@color/colorBlack"
                 android:textSize="25dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:id="@+id/txtNameDatBan"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Số 814A Nguyễn Văn Qúa, P. Đông Hưng Thuận, Q. 12" />
+                android:text="Số 814A Nguyễn Văn Qúa, P. Đông Hưng Thuận, Q. 12"
+                android:id="@+id/txtDiaChiDatBan"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -347,11 +349,11 @@
                     android:layout_gravity="center"
                     android:background="@color/colorXam" />
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_navigate_before_black_24dp" />
+                <!--<ImageView-->
+                    <!--android:layout_width="30dp"-->
+                    <!--android:layout_height="30dp"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:src="@drawable/ic_navigate_before_black_24dp" />-->
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -363,14 +365,15 @@
                         android:layout_width="250dp"
                         android:layout_height="35dp"
                         android:gravity="center"
-                        android:hint="Ấn vào đây để chọn giờ" />
+                        android:hint="Ấn vào đây để chọn giờ"
+                        android:layout_marginLeft="20dp"/>
                 </LinearLayout>
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_navigate_next_black_24dp" />
+                <!--<ImageView-->
+                    <!--android:layout_width="30dp"-->
+                    <!--android:layout_height="30dp"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:src="@drawable/ic_navigate_next_black_24dp" />-->
             </LinearLayout>
 
             <View
