--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,8 @@
     android:orientation="vertical"
     android:paddingLeft="20dp"
     tools:context=".LoginActivity"
-    android:background="#46b725">
+    android:background="@color/colorPrimaryDark">
+    <!--android:background="#46b725">-->
 
     <TextView
         android:layout_width="match_parent"
@@ -75,6 +76,15 @@
         android:textAllCaps="false"
 
         />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:orientation="vertical">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:src="@drawable/loginimg3"/>
     </LinearLayout>
 
 </LinearLayout>
