--- a/app/src/main/res/layout/fragment_near_me.xml
+++ b/app/src/main/res/layout/fragment_near_me.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <include layout="@layout/gg_map"/>
+        <!--<include layout="@layout/gg_map"/>-->
 
        <include layout="@layout/header_neer_me"/>
 
@@ -38,5 +38,4 @@
 
 
     </LinearLayout>
-
 </LinearLayout>
