--- a/app/src/main/res/layout/popular_billiards.xml
+++ b/app/src/main/res/layout/popular_billiards.xml
@@ -25,7 +25,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:clickable="true"
+                    android:onClick="layoutgannhat1">
 
                     <ImageView
                         android:id="@+id/btnPopular"
@@ -36,17 +38,25 @@
                         android:scaleType="centerCrop"
                         android:src="@drawable/billiard1"
                         android:clickable="true"
-                        android:onClick="clicktoview"/>
+                        android:onClick="layoutgannhat1"/>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Billiard HCI Assignment -\nQuận 12 Tô Ký"
+                            android:gravity="center"
+                            android:text="Billiard Kiên Yết"
+                            android:textColor="@color/colorBlack"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Quận 12 Tô Ký"
                             android:textColor="@color/colorBlack"
-                            android:gravity="center" />
+                            android:layout_marginTop="-3dp"/>
                         <TextView
                             android:paddingTop="4dp"
                             android:layout_width="match_parent"
@@ -64,12 +74,15 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="180dp"
                 android:layout_height="match_parent"
-                android:layout_marginRight="8dp">
+                android:layout_marginRight="8dp"
+               >
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:clickable="true"
+                    android:onClick="layoutgannhat2">
 
                     <ImageView
                         android:id="@id/btnPopular"
@@ -80,18 +93,26 @@
                         android:scaleType="centerCrop"
                         android:src="@drawable/billiard2"
                         android:clickable="true"
-                        android:onClick="clicktoview"/>
+                        android:onClick="layoutgannhat2"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Billiard HCI Assignment -\nQuận 12 Tô Ký"
+                            android:gravity="center"
+                            android:text="Billiard 27"
+                            android:textColor="@color/colorBlack" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Quận 12 Tô Ký"
                             android:textColor="@color/colorBlack"
-                            android:gravity="center" />
+                            android:layout_marginTop="-3dp"/>
                         <TextView
                             android:paddingTop="4dp"
                             android:layout_width="match_parent"
@@ -115,7 +136,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:clickable="true"
+                    android:onClick="layoutgannhat4">
 
                     <ImageView
                         android:id="@id/btnPopular"
@@ -126,7 +149,7 @@
                         android:scaleType="centerCrop"
                         android:src="@drawable/billiard1"
                         android:clickable="true"
-                        android:onClick="clicktoview"/>
+                        android:onClick="layoutgannhat4"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -135,9 +158,16 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Billiard HCI Assignment -\nQuận 12 Tô Ký"
+                            android:text="Billiard Ngôi Sao"
                             android:textColor="@color/colorBlack"
                             android:gravity="center" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Quận 12 Tô Ký"
+                            android:textColor="@color/colorBlack"
+                            android:layout_marginTop="-3dp"/>
                         <TextView
                             android:paddingTop="4dp"
                             android:layout_width="match_parent"
@@ -156,12 +186,15 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="180dp"
                 android:layout_height="match_parent"
-                android:layout_marginRight="8dp">
+                android:layout_marginRight="8dp"
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:clickable="true"
+                    android:onClick="layoutgannhat6">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -171,7 +204,7 @@
                         android:scaleType="centerCrop"
                         android:src="@drawable/billiard4"
                         android:clickable="true"
-                        android:onClick="clicktoview"
+                        android:onClick="layoutgannhat6"
                         android:id="@id/btnPopular"/>
 
                     <LinearLayout
@@ -181,9 +214,16 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Billiard HCI Assignment -\nQuận 12 Tô Ký"
+                            android:text="Billiard 259 Club"
                             android:textColor="@color/colorBlack"
                             android:gravity="center" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Quận 12 Tô Ký"
+                            android:textColor="@color/colorBlack"
+                            android:layout_marginTop="-3dp"/>
                         <TextView
                             android:paddingTop="4dp"
                             android:layout_width="match_parent"
